templates/deconz-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deconz
  name: deconz
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: deconz
  template:
    metadata:
      labels:
        app: deconz
    spec:
      containers:
      - name: deconz
        image: deconzcommunity/deconz
        ports:
        - name: http
          containerPort: 30080
          hostPort: 30080
          protocol: TCP
        - name: https
          containerPort: 30443
          hostPort: 30443
          protocol: TCP
        - name: vnc
          containerPort: 35900
          hostPort: 35900
          protocol: TCP
        - name:  novnc
          containerPort: 36080
          hostPort: 36080
          protocol: TCP
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /dev/ttyACM0
          name: device
        - mountPath: /opt/deCONZ
          name: persistent-storage
        - mountPath: /etc/localtime
          name: localtime
        - mountPath: /etc/timezone
          name: timezone
      volumes:
      - name: device
        hostPath:
          path: /dev/ttyACM0
      - name: persistent-storage
        hostPath:
          path: /data/deconz
      - name: localtime
        hostPath:
          path: /etc/localtime
      - name: timezone
        hostPath:
          path: /etc/timezone
