templates/openhab-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: openhab
  name: openhab
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: openhab
  template:
    metadata:
      labels:
        app: openhab
    spec:
      containers:
      - name: openhab
        image: openhab/openhab
        ports:
        - containerPort: 8080
        - containerPort: 8443
        volumeMounts:
        - mountPath: ./openhab_addons
          name: openhab_addons
        - mountPath: ./openhab_conf
          name: openhab_conf
        - mountPath: ./openhab_userdata
          name: openhab_userdata
        - mountPath: /etc/localtime
          name: localtime
        - mountPath: /etc/timezone
          name: timezone
      volumes:
      - name: openhab_addons
        hostPath:
          path: /data/openhab/addons
      - name: openhab_conf
        hostPath:
          path: /data/openhab/conf
      - name: openhab_userdata
        hostPath:
          path: /data/openhab/userdata
      - name: localtime
        hostPath:
          path: /etc/localtime
      - name: timezone
        hostPath:
          path: /etc/timezone
