templates/rocket-chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rocket-chat
  name: rocket-chat
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rocket-chat
  template:
    metadata:
      labels:
        app: rocket-chat
    spec:
      containers:
        - name: rocket-chat
          image: "registry.rocket.chat/rocketchat/rocket.chat:7.2.0"
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
