templates/rocket-chat-mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rocket-chat-mongodb
  name: rocket-chat-mongodb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rocket-chat-mongodb
  template:
    metadata:
      labels:
        app: rocket-chat-mongodb
    spec:
      containers:
        - name: rocket-chat-mongodb
          image: "docker.io/bitnami/mongodb:6.0"
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /bitnami/mongodb
      restartPolicy: Always
      volumes:
        - name: data
          hostPath:
            path: "/data/rocket-chat-mongodb"
