templates/deconz-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: deconz
spec:
  selector:
    app: deconz
  ports:
    - name: http
      protocol: TCP
      port: 30080
      targetPort: 30080
    - name: https
      protocol: TCP
      port: 30443
      targetPort: 30443
    - name: vnc
      protocol: TCP
      port: 35900
      targetPort: 35900
    - name: novnc
      protocol: TCP
      port: 36080
      targetPort: 36080
