templates/external-paperless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
spec:
  type: ExternalName
  externalName: tortuga
  ports:
    - port: 8010
