templates/nextcloud-redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-redis
spec:
  selector:
    app: nextcloud-redis
  ports:
    - name: http
      protocol: TCP
      port: 6379
      targetPort: 6379
