templates/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
  - name: http
    protocol: "TCP"
    nodePort: 30080
    port: 80
  - name: https
    protocol: "TCP"
    nodePort: 30443
    port: 443
