templates/openhab-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: openhab
spec:
  selector:
    app: openhab
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 8443
      targetPort: 8443
