templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: public
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: jollyroger-letsencrypt-issuer
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "1g"
    nginx.org/client-max-body-size: "1g"
spec:
  tls:
    - secretName: jollyroger-letsencrypt-secret
      hosts:
        - jollyroger.duckdns.org
        - paperless.jollyroger.duckdns.org
  rules:
    - host: jollyroger.duckdns.org
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nginx
                port:
                  name: http
    - host: paperless.jollyroger.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless
                port:
                  number: 8010
